# src/validator/rules.js
@@ -12,8 +12,12 @@ const validate = (req, res, next) => {
 
 exports.regUser = [
     body(`username`, `username is empty`).notEmpty(),
-    body(`email`, `enter valid email`).isEmail(),
+    body(`email`, `email is not valid`).isEmail(),
     body(`password`, `password is empty`).notEmpty(),
+    body(`birthDate`, `birthDate is not valid`).isDate(),
+    body(`address`, `address is empty`).notEmpty(),
+    body(`instance`, `instance is empty`).notEmpty(),
+    body(`phoneNumber`, `phoneNumber is not valid`).isMobilePhone(),
     validate
 ]
 exports.loginUser = [
